# SleepDetector

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
Client/: .gitignore  Makefile  Makefile~  client  common.h  common.h~  framebuilder.cpp  framebuilder.h  frameserializer.h  frameserializer.h~  main.cpp  main.cpp~  protocol.h  streamclient.cpp  streamclient.cpp~  streamclient.h  streamclient.h~
Client/libsocket/: cmake_install.cmake
Server/: .gitignore  README.md
Server/libs/libsocket/: Makefile
Server/src/: BlueFoxCam.cpp  BlueFoxCam.h  LPF.cpp  LPF.h  Makefile  Makefile.old  detector.cpp  detector.h  main.cpp  sleepdetector.cpp
Server/src/Streamer/: common.h  frameserializer.cpp  frameserializer.h  streamserver.cpp  streamserver.h
Server/src/Streamer/libsocket/: Makefile  cmake_install.cmake
libs/: ps3eye.h
src/: BlueFoxCam.cpp  BlueFoxCam.cpp~  BlueFoxCam.h  Makefile  Makefile~  compile.sh~  detector.cpp  detector.cpp~  detector.h  detector.h~  main.cpp  main.cpp~  sleepdetector.cpp  sleepdetector.cpp~  sleepdetector.h  sleepdetector.h~
